--- a/ets2-tool/src/styles.css
+++ b/ets2-tool/src/styles.css
@@ -60,8 +60,11 @@ nav .link-btn:hover {
 }
 
 .tool-card:hover {
-  transform: translateY(-5px);
+  transform: translateY(-15px); /* Tool Card Hover kommt nach oben -> Wird hoch gehoben */ 
   border-color: #0ff;
+  box-shadow: 0px 0px 15px 3px rgba(0, 225, 255, 0.75);
+    -webkit-box-shadow: 0px 0px 15px 3px rgba(0,255,255,0.75);
+    -moz-box-shadow: 0px 0px 15px 3px rgba(0,255,255,0.75);
 }
 
 .tool-card img {
@@ -88,7 +91,7 @@ nav .link-btn:hover {
   padding: 10px;
   background: #0ff;
   border: none;
-  border-radius: 10px;
+  border-radius: 20px;
   cursor: pointer;
   color: black; /* Textfarbe auf Buttons, damit sie lesbar sind */
 }
@@ -148,7 +151,7 @@ nav .link-btn:hover {
 .save-picker button {
   background: none;
   border: none;
-  color: white;
+  color: #0ff;
   cursor: pointer;
   padding: 0;
   margin: 0;
@@ -235,7 +238,8 @@ nav .link-btn:hover {
   color: #fff;
   display: flex;
   align-items: center;
-  gap: 10px;
+  gap: 15px;
+  border-radius: 10px;
 
   /* Optional: Leichte Schatten oder Rand bei Hover zur Hervorhebung */
   transition: background 0.2s;
