--- a/ets2-tool/src/styles.css
+++ b/ets2-tool/src/styles.css
@@ -21,6 +21,14 @@ body {
   font-size: 22px;
   font-weight: bold;
   color: #0ff; /* Akzentfarbe Cyan */
+  display: flex;
+  align-items: center;
+  gap: 10px;
+}
+
+.logo img {
+  width: 32px;
+  height: 32px;
 }
 
 /* Stile für alle Navigations-Elemente (Button und A) */
@@ -115,10 +123,14 @@ nav .link-btn:hover {
 .game-switch button {
   background: none;
   border: 2px solid #555;
-  padding: 6px 14px;
+  padding: 7px 14px;
   border-radius: 8px;
   color: #aaa;
   cursor: pointer;
+  align-items: center;
+  gap: 10px;
+  justify-content: center;
+  font-weight: bold;
 }
 
 .game-switch button.active {
@@ -131,6 +143,17 @@ nav .link-btn:hover {
   color: #888; /* Dunklerer Text */
   cursor: not-allowed; /* Zeigt ein "Stopp"-Symbol beim Hover */
   border-color: #ccc;
+}
+
+.game-switch button img {
+     /* Setzt eine konsistente Größe für beide Logos */
+    width: 20px; 
+    height: 20px;
+    /* Größenangaben im HTML (sizes="15px") werden hier überschrieben */
+}
+
+.game-switch button span {
+  transform: translateY(-15px);
 }
 
 .profile-picker,
@@ -156,6 +179,7 @@ nav .link-btn:hover {
   padding: 0;
   margin: 0;
 }
+
 
 .refresh-btn {
   margin-left: auto; /* Schiebt den Button ganz nach rechts */
